Force to use https where possible.

--- a/css/main.css
+++ b/css/main.css
@@ -62,10 +62,10 @@
 --------------------------------------------------------------*/
 
 /* Roboto Condensed */
-@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,700,300,400);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400italic,700italic,700,300,400);
 
 /* Open Sans */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,700,300,600,800,400);
 
 /*--------------------------------------------------------------
     2.0 - Fork Awesome 1.2.0
