Add shadow to Telegram and Discord button

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,3 +10,12 @@
 /*--------------------------------------------------------------
     Custom CSS
 ----------------------------------------------------------------
+*/
+
+.shadow {
+  box-shadow: 0 0 0 0px rgba(0, 0, 0, 0);
+  transition: all 200ms ease-out;
+}
+.shadow:hover {
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+}
